[package]
name = "edge"
version = "0.2.0"
description = "A simple Web framework for Rust."
documentation = "http://matt2xu.github.io/edge-rs/edge/index.html"
repository = "https://github.com/matt2xu/edge-rs/"
readme = "README.md"
license = "MIT"
authors = ["Matthieu Wipliez <matthieu.wipliez@gmail.com>"]
keywords = ["http", "web", "framework", "asynchronous"]

[dependencies]
url = "1.0"
deque = "0.3"
serde = "0.7"
serde_json = "0.7"
log = "0.3"
pulldown-cmark = "0.0.8"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "ce3dbd1"
default-features = false
features = ["cookie"]

[dependencies.handlebars]
version = "0.16"
default-features = false
features = ["serde_type"]

[dev-dependencies]
env_logger = "0.3"
