[package]
name = "edge"
version = "0.2.0"
description = "A simple Web framework for Rust."
documentation = "http://matt2xu.github.io/edge-rs/edge/index.html"
repository = "https://github.com/matt2xu/edge-rs/"
readme = "README.md"
license = "MIT"
authors = ["Matthieu Wipliez <matthieu.wipliez@gmail.com>"]
keywords = ["http", "web", "framework", "asynchronous"]

[dependencies]
deque = "0.3"
log = "0.3"
pulldown-cmark = "0.0.8"
serde = "0.7"
serde_json = "0.7"
url = "1.1"

[dependencies.handlebars]
version = "0.17"
default-features = false
features = ["serde_type"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "0c847f7"
default-features = false
features = ["cookie"]

[dev-dependencies]
env_logger = "0.3"
