[package]
name = "edge"
version = "0.3.0"
description = "A simple Web framework for Rust."
documentation = "http://matt2xu.github.io/edge-rs/edge/index.html"
repository = "https://github.com/matt2xu/edge-rs/"
readme = "README.md"
license = "MIT"
authors = ["Matthieu Wipliez <matthieu.wipliez@gmail.com>"]
keywords = ["http", "web", "framework", "asynchronous"]

[dependencies]
crossbeam = "0.2"
log = "0.3"
num_cpus = "0.2"
pulldown-cmark = "0.0.8"
scoped-pool = "0.1"
serde = "0.7"
serde_json = "0.7"
url = "1.1"

[dependencies.handlebars]
version = "0.17"
default-features = false
features = ["serde_type"]

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "e682844"
default-features = false
features = ["cookie"]

[dev-dependencies]
env_logger = "0.3"
rusqlite = "0.7"
lazy_static = "0.1"
